--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,9 @@
 /*
- *= require_tree .
- *= require_self
- */
+*= require font-awesome
+*= require bootstrap.min
+*= require animate.min
+*= require owl.carousel
+*= require owl.theme
+*= require style.default
+*= require_self
+*/
