--- a/app/views/carts/_item_cart.html.erb
+++ b/app/views/carts/_item_cart.html.erb
@@ -1,12 +1,12 @@
-<%= form_tag item_path(item["product_id"]), method: :put, class: "form-control", remote: true do %>
+<%= form_for :item, url: item_path(id: item["product_id"]), method: :put, class: "form-control" do |f| %>
   <tr>
     <td><%= link_to item["name"], product_path(id: item["product_id"]) %></td>
     <td>
-      <%= number_field_tag :quantity, item["quantity"].to_i, class: "form-control", min: Settings.cart.default_quantity %>
+      <%= f.number_field :quantity, value: item["quantity"].to_i, class: "form-control", min: Settings.cart.default_quantity %>
     </td>
     <td><%= item["price"] %> VND</td>
     <td><%= item["price"].to_i * item["quantity"].to_i %> VND</td>
-    <td><%= submit_tag t("update"), class: "btn btn-primary" %></td>
+    <td><%= f.submit t("update"), class: "btn btn-primary" %></td>
     <td>
       <%= link_to t("delete"), item_path(id: item["product_id"], product_id: item["product_id"]), data: {confirm: t("confirm_delete") + "'#{item["name"]}'"}, method: :delete, remote: true, class: "btn btn-danger" %>
     </td>
