--- a/app/views/shared/_show_search.html.erb
+++ b/app/views/shared/_show_search.html.erb
@@ -1,13 +1,14 @@
 <div id="all">
   <div id="content">
     <div class="container">
+    <% if @products.present? %>
       <div class="col-md-9">
         <div class="row products">
-          <% if @products.present? %>
             <%= render @products %>
-          <% end %>
         </div>
+        <%= paginate @products, theme: "twitter-bootstrap-3" %>
       </div>
+    <% end %>
       <div class="col-md-3">
         <%= render "shared/right_sidebar" %>
       </div>
