--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,14 +1,1 @@
-<div id="all">
-  <div id="content">
-    <div class="container">
-      <div class="col-md-3">
-        <%= render "shared/left_sidebar" %>
-      </div>
-      <div class="col-md-9">
-        <div class="row products">
-          <%= render @products %>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render "shared/show_search" %>
