--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,7 +22,11 @@
           </p>
           <p class="price"><%= @product.price %></p>
           <p class="text-center buttons">
-            <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i><%= t "add_to_cart" %></a>
+            <% if @product.quantity > 0 %>
+              <%= link_to t("add_to_cart"), items_path(product_id: @product.id), method: :post, remote: true, class: "btn btn-primary" %>
+            <% else %>
+              <button class = "btn btn-warning"><%= t "sold_out" %></button>
+            <% end %>
             <a href="basket.html" class="btn btn-default"><i class="fa fa-heart"></i><%= t "add_to_wishlist" %></a>
           </p>
         </div>
