--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,30 +1,25 @@
-<div class="col-md-3">
-  <div class="product-slider">
-    <div class="item">
-      <div class="product">
-        <div class="flip-container">
-          <div class="flipper">
-            <div class="front">
-              <a href="#">
-                <%= show_image product %>
-              </a>
-            </div>
-            <div class="back">
-              <a href="#">
-                <%= show_image product %>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="text">
-          <h3><a href="#"><%= product.name %></a></h3>
-          <p class="price"><%= product.price %></p>
-          <p class="description"><%= product.description %></p>
-          <p class="buttons">
-            <%= link_to (t "view_detail" ), product, {:class => "btn btn-default"} %>
-            <a href="#" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+<div class="col-md-4">
+<div class="item">
+  <div class="product">
+    <div>
+      <div class="">
+        <%= link_to show_image(product), product %>
+      </div>
+    </div>
+    <br>
+    <div class="text">
+      <h3><%= link_to product.name, product %></h3>
+      <p class="price"><%= product.price %></p>
+      <p class="buttons">
+        <%= link_to (t "view_detail" ), product, {:class => "btn btn-default"} %>
+        <% if product.quantity > 0 %>
+        <%= link_to t("add_to_cart"), items_path(id: Settings.cart.item_id_default,
+          product_id: product.id, quantity: Settings.cart.default_quantity),
+          method: :post, remote: true, class: "btn btn-primary" %>
+        <% else %>
+          <button class="btn btn-warning"><%= t "sold_out" %></button>
+        <% end %>
         </p>
-        </div>
       </div>
     </div>
   </div>
