--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,5 @@
 <% if comment.user.present? %>
+  <div id="comment-<%= comment.id %>">
   <div class="media-left">
     <img src="img/img_avatar1.png" class="media-object" style="width:60px">
   </div>
@@ -7,4 +8,17 @@
     <p><%= comment.content %></p>
   </div>
   <hr>
+  <div class="option-comment">
+    <% if logged_in? %>
+      <%= link_to "Edit", edit_product_comment_path(comment.product, comment), class: "btn btn-primary", remote: true %>
+      <%= link_to "Delete", product_comment_path(comment.product, comment), class: "btn btn-primary", remote: true, method: :delete, data: {confirm: "Are you sure?"} %>
+    <% end %>
+  </div>
+  <div class="comment-<%= comment.id %>">
+    <h4 class="media-heading"><%= comment.user.name %></h4>
+    <p><%= comment.content %></p>
+  </div>
+  </div>
+  <hr>
+  <div>
 <% end %>
