--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,7 +11,6 @@
             <div class="theribbon">SALE</div>
             <div class="ribbon-background"></div>
           </div>
-
           <div class="ribbon new">
             <div class="theribbon">NEW</div>
             <div class="ribbon-background"></div>
@@ -24,7 +23,11 @@
             </p>
             <p class="price"><%= @product.price %></p>
             <p class="text-center buttons">
-              <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i><%= t "add_to_cart" %></a>
+              <% if @product.quantity > 0 %>
+                <%= link_to t("add_to_cart"), items_path(id: Settings.cart.item_id_default, product_id: @product.id, quantity: Settings.cart.default_quantity), method: :post, remote: true, class: "btn btn-primary" %>
+              <% else %>
+                <button class = "btn btn-warning"><%= t "sold_out" %></button>
+              <% end %>
               <a href="basket.html" class="btn btn-default"><i class="fa fa-heart"></i><%= t "add_to_wishlist" %></a>
             </p>
           </div>
@@ -51,9 +54,9 @@
             </p>
           </div>
           <% if logged_in? %>
-          <%= render partial: "comments/form" %>
+            <%= render partial: "comments/form" %>
           <% else %>
-          <%= link_to t("require_login_comment"), login_path, class: "btn btn-warning" %>
+            <%= link_to t("require_login_comment"), login_path, class: "btn btn-warning" %>
           <% end %>
         </div>
         <div class="box" id="comments">
