--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,7 +9,6 @@
           <div class="theribbon">SALE</div>
           <div class="ribbon-background"></div>
         </div>
-
         <div class="ribbon new">
           <div class="theribbon">NEW</div>
           <div class="ribbon-background"></div>
@@ -22,13 +21,16 @@
           </p>
           <p class="price"><%= @product.price %></p>
           <p class="text-center buttons">
-            <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i><%= t "add_to_cart" %></a>
+            <% if @product.quantity > 0 %>
+              <%= link_to t("add_to_cart"), items_path(id: Settings.cart.item_id_default, product_id: @product.id, quantity: Settings.cart.default_quantity), method: :post, remote: true, class: "btn btn-primary" %>
+            <% else %>
+              <button class = "btn btn-warning"><%= t "sold_out" %></button>
+            <% end %>
             <a href="basket.html" class="btn btn-default"><i class="fa fa-heart"></i><%= t "add_to_wishlist" %></a>
           </p>
         </div>
       </div>
     </div>
-
     <div class="box" id="details">
       <h4><%= t "detail_product" %></h4>
       <blockquote>
@@ -60,26 +62,24 @@
         <%= render @product.comments %>
       </div>
     </div>
-
     <div class="row same-height-row">
       <div class="col-md-3 col-sm-6">
         <div class="box same-height">
           <h3><%= t "same_product" %></h3>
         </div>
       </div>
-
       <div class="col-md-3 col-sm-6">
         <div class="product same-height">
           <div class="flip-container">
             <div class="flipper">
               <div class="front">
                 <a href="detail.html">
-                  <%= show_image @product %>
+                  <img src="img/product1.jpg" alt="" class="img-responsive">
                 </a>
               </div>
               <div class="back">
                 <a href="detail.html">
-                  <%= show_image @product %>
+                  <img src="img/product1.jpg" alt="" class="img-responsive">
                 </a>
               </div>
             </div>
@@ -145,8 +145,6 @@
           </div>
         </div>
       </div>
-
-
     </div>
   </div>
 </div>
