--- a/app/views/shared/_show_search.html.erb
+++ b/app/views/shared/_show_search.html.erb
@@ -5,6 +5,10 @@
         <div class="row products">
           <% if @products.present? %>
             <%= render @products %>
+          <% else %>
+            <div class="alert alert-danger">
+              <%= t ".cant_find_product" %>
+            </div>
           <% end %>
         </div>
       </div>
