--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,4 @@
 <% provide(:title, t(".home")) %>
-
 <%= render "layouts/banner" %>
 <div id="content">
 <div id="advantages">
@@ -34,8 +33,8 @@
       </div>
     </div>
   </div>
-
 </div>
+
 <div id="hot">
   <div class="box">
     <div class="container">
@@ -47,7 +46,6 @@
       <% end %>
     </div>
   </div>
-
 </div>
 
 <div id="hot">
@@ -61,4 +59,6 @@
       <% end %>
     </div>
   </div>
+</div>
+
 </div>
