--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -44,9 +44,12 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :image %>
-        <%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png',
-          class: "form-control" %>
+        <%= f.fields_for :images do |image| %>
+        <%= render "image_fields", f: image %>
+        <% end %>
+        <div class="links">
+        <%= link_to_add_association 'add image', f, :images %>
+      </div>
       </div>
 
       <div class="form-group">
@@ -57,7 +60,7 @@
 
       <div class="form-group">
         <%= f.label :provider_id %>
-        <%= f.collection_select :provider_id, Category.order(:name), :id, :name,
+        <%= f.collection_select :provider_id, Provider.order(:name), :id, :name,
           {prompt: true}, {class: "form-control"} %>
       </div>
 
