--- a/app/views/orders/_form_order.html.erb
+++ b/app/views/orders/_form_order.html.erb
@@ -71,7 +71,7 @@
           <tfoot>
             <tr>
               <th colspan="5">Total</th>
-              <th><%= total_cart %></th>
+              <th><%= f.text_field :total, value: total_cart %></th>
             </tr>
           </tfoot>
         </table>
