--- a/app/views/admin/layouts/_navbar.html.erb
+++ b/app/views/admin/layouts/_navbar.html.erb
@@ -25,6 +25,12 @@
             <li><%= link_to t(".create"), new_admin_product_path %></li>
           </ul>
         </li>
+      <li> <a class="has-arrow  " href="#" aria-expanded="false"><i class="fa fa-book"></i><span class="hide-menu"><%= t ".statistic" %></span></a>
+          <ul aria-expanded="false" class="collapse">
+            <li><%= link_to t(".statistic_sell_product"), admin_statistics_path %></li>
+            <li><%= link_to t(".statistic_order"), admin_statistics_path, data: {type: "order"} %></li>
+          </ul>
+        </li>
       </ul>
     </nav>
   </div><div class="slimScrollBar" style="background: rgb(220, 220, 220); width: 5px; position: absolute; top: 0px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; left: 1px; height: 303.222px;"></div><div class="slimScrollRail" style="width: 5px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51); opacity: 0.2; z-index: 90; left: 1px;"></div></div>
