--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -34,7 +34,7 @@
               <% if logged_in? %>
                 <%= render partial: "favourites/form" %>
               <% else %>
-                <a href="<%= login_path %>" class="btn btn-default"><i class="fa fa-heart"></i><%= t ".must_login" %></a>
+                <a href="<%= login_path(product_id: @product.id) %>" class="btn btn-default"><i class="fa fa-heart"></i><%= t ".must_login" %></a>
               <% end %>
             </div>
           </div>
@@ -63,7 +63,7 @@
       <% if logged_in? %>
       <%= render partial: "comments/form" %>
       <% else %>
-      <%= link_to t("require_login_comment"), login_path, class: "btn btn-warning" %>
+      <%= link_to t("require_login_comment"), login_path(product_id: @product.id), class: "btn btn-warning" %>
       <% end %>
     </div>
     <div class="box" id="comments">
@@ -72,94 +72,6 @@
       <div class="media comment-product">
         <%= render @product.comments %>
       </div>
-    </div>
-
-    <div class="row same-height-row">
-      <div class="col-md-3 col-sm-6">
-        <div class="box same-height">
-          <h3><%= t "same_product" %></h3>
-        </div>
-      </div>
-
-      <div class="col-md-3 col-sm-6">
-        <div class="product same-height">
-          <div class="flip-container">
-            <div class="flipper">
-              <div class="front">
-                <a href="detail.html">
-                  <%= show_image @product %>
-                </a>
-              </div>
-              <div class="back">
-                <a href="detail.html">
-                  <%= show_image @product %>
-                </a>
-              </div>
-            </div>
-          </div>
-          <a href="detail.html" class="invisible">
-            <img src="img/product2.jpg" alt="" class="img-responsive">
-          </a>
-          <div class="text">
-            <h3>Fur coat</h3>
-            <p class="price">$143</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-3 col-sm-6">
-        <div class="product same-height">
-          <div class="flip-container">
-            <div class="flipper">
-              <div class="front">
-                <a href="detail.html">
-                  <img src="img/product1.jpg" alt="" class="img-responsive">
-                </a>
-              </div>
-              <div class="back">
-                <a href="detail.html">
-                  <img src="img/product1_2.jpg" alt="" class="img-responsive">
-                </a>
-              </div>
-            </div>
-          </div>
-          <a href="detail.html" class="invisible">
-            <img src="img/product1.jpg" alt="" class="img-responsive">
-          </a>
-          <div class="text">
-            <h3>Fur coat</h3>
-            <p class="price">$143</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-3 col-sm-6">
-        <div class="product same-height">
-          <div class="flip-container">
-            <div class="flipper">
-              <div class="front">
-                <a href="detail.html">
-                  <img src="img/product3.jpg" alt="" class="img-responsive">
-                </a>
-              </div>
-              <div class="back">
-                <a href="detail.html">
-                  <img src="img/product3_2.jpg" alt="" class="img-responsive">
-                </a>
-              </div>
-            </div>
-          </div>
-          <a href="detail.html" class="invisible">
-            <img src="img/product3.jpg" alt="" class="img-responsive">
-          </a>
-          <div class="text">
-            <h3>Fur coat</h3>
-            <p class="price">$143</p>
-          </div>
-        </div>
-      </div>
-
-
     </div>
   </div>
 </div>
